dubbi_sulle_function

--- a/idex.html
+++ b/idex.html
@@ -10,6 +10,19 @@
 </head>
 
 <body>
+
+    <ul id="list_100">
+
+    </ul>
+
+
+    <select id="level">
+        <option value="grid_100()" onclick="grid_100" selected>100</option>
+        <option value="grid_89()">89</option>
+        <option value="grid_49()">49</option>
+    </select>
+
+
     <script src="./asset/js/main.js"></script>
 </body>
 
