--- a/idex.html
+++ b/idex.html
@@ -6,21 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 
 <body>
 
-    <ul id="list_100">
+    <div class="container">
 
-    </ul>
+        <div class="row bgHeader text-white">
+            <div class="col text-start m-3">
+                logo
+            </div>
+            <!-- logo -->
+            <div class="col text-center">
+                <h1>titolo</h1>
+            </div>
+            <!-- titolo centrale -->
+            <div class="col text-end mt-3">
+                <form id="myForm" action="" method="post">
+                    <select name="level" id="level" onChange="grid()">
+                        <option value="default" selected="selected">scegli il livello</option>
+                        <option value="easy">easy</option>
+                        <option value="medium">medium</option>
+                        <option value="hard">hard</option>
+                    </select>
+                </form>
+            </div>
+            <!-- form per scegliere il livello -->
+        </div>
+        <!-- prima row -->
 
+        <div class="row ">
+            <ul class="d-flex flex-wrap" id="list_100">
+                <!-- dove andrà la griglia formata dal js -->
+            </ul>
+        </div>
+        <!-- seconda row -->
 
-    <select id="level">
-        <option value="grid_100()" onclick="grid_100" selected>100</option>
-        <option value="grid_89()">89</option>
-        <option value="grid_49()">49</option>
-    </select>
+    </div>
+    <!-- container -->
+
 
 
     <script src="./asset/js/main.js"></script>
